...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btCreateRoulettes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F29F05"
        android:fontFamily="@font/inter_semibold"
        android:text="Criar Roleta +"
        android:textStyle="italic"
...
